--- a/index.html
+++ b/index.html
@@ -6,19 +6,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/mediaqueries.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <title>Login projeto</title>
 </head>
 <body>
     <main>
         <section id="login">
             <div id="imagem">
-                
             </div>
             <div id="formulario">
                 <h1>Login</h1>
                 <p>Seja bem vindo(a) novamente, faça login para acessar as configurações e o ambiente.</p>
-                <form action="#" method="post">
-
+                <form action="#" method="post" autocomplete="on">
+                    <div class="campo">
+                        <span class="material-symbols-outlined">
+                            person
+                        </span>
+                        <input type="email" name="login" id="ilogin" placeholder="seu email" autocomplete="email" required maxlength="30">
+                        <label for="ilogin">Login *</label>
+                    </div>
+                    <div class="campo">
+                        <span class="material-symbols-outlined">
+                            vpn_key
+                        </span>
+                        <input type="password" name="senha" id="isenha" placeholder="sua senha" autocomplete="current-password" required maxlength="50">
+                        <label for="isenha">Senha *</label>
+                    </div>
+                    <input type="submit" value="Entrar">
+                    <a href="esqueci.html">
+                        esqueci a senha <i class="material-symbols-outlined">mail</i>
+                    </a>
                 </form>
             </div>
         </section>
